# CABSAIA

./: .gitignore  Phases.txt  config.py  emotion_demo.py  main.py  main_test_loop.py  pyproject.toml  readme.md  ref.txt  requirements.txt
behavior/: role_engine.py
config/: roles.yaml
core/: llm_interface.py  prompt_generator.py
data/: darwin_labels.json  vad_scores.json  vad_scores_old.json
emotion/: __init__.py  emotion_mapper.py  emotion_profile.py
processing/: context_negators.py  emotion_classifier.py  emotion_infer.py
resources/: emotion_dictionary.py
state/: emotion.py  emotion_debt.py  emotion_frr.py  emotion_trigger.py
tests/: test_burst_mechanism.py  test_config_load.py  test_context_negators.py  test_emotion.py  test_emotion_classifier.py  test_emotion_frr.py  test_emotion_trigger.py  test_llm_interface.py  test_prompt_generator.py  test_role_engine.py
