[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cabsaia"
version = "0.0.0"
description = "CABSAIA sandbox"
requires-python = ">=3.11"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = ["."]
include = ["processing", "state", "behavior", "core", "plugins", "emotion", "ui", "resources", "config"]